@@ -1,4 +1,5 @@
 
+Atropos show all informations (status, time to live, etc)
 Fix return to prompt (-h ou -V) 
 
 04/03/2015 vrrpd 1.12
